<resources>

    <string name="app_name">Attendance Care</string>
    <string name="sub1">Subject 1...</string>
    <string name="sub2">Subject 2...</string>
    <string name="sub3">Subject 3...</string>
    <string name="sub4">Subject 4...</string>
    <string name="sub5">Subject 5...</string>
    <string name="sub6">Subject 6...</string>
    <string name="sub7">Subject 7...</string>
    <string name="sub8">Subject 8...</string>
    <string name="sub9">Subject 9...</string>
    <string name="sub10">Subject 10...</string>
    <string name="class1">Class 1</string>
    <string name="class2">Class 2</string>
    <string name="class3">Class 3</string>
    <string name="class4">Class 4</string>
    <string name="class5">Class 5</string>
    <string name="class6">Class 6</string>
    <string name="class7">Class 7</string>
    <string name="class8">Class 8</string>
    <string name="class9">Class 9...</string>
    <string name="class10">Class 10...</string>
    <string name="email">karthickindian2011@gmail.com</string>
    <string name="day1">Monday</string>
    <string name="day2">Tuesday</string>
    <string name="day3">Wednesday</string>
    <string name="day4">Thursday</string>
    <string name="day5">Friday</string>
    <string name="day6">Saturday</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="satt">Sat</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="sat">include saturdays</string>
    <string name="enter_classes">Enter no of classes per day:</string>
    <string name="error_name_length">The no of classes should be between 4 and 10</string>
    <string name="error_name_letters">Please enter a number!!</string>
    <string name="fillAll">Please fill all your classes</string>
    <string name="max_char">Max characters is 13</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="setDate"> please select the week to start!!</string>
    <string name="checkHol">Set as free period!!</string>
    <string name="enterClass">Enter class</string>
    <string name="len7">keep no of letters less than 7</string>
    <string name="len0">Please enter the class!!</string>
    <string name="leave">Please leave it blank if you dont have any class!!</string>
    <string name="ten">7</string>
    <string name="nine">7</string>
    <string name="eight">7</string>
    <string name="seven">7</string>
    <string name="six">7</string>
    <string name="five">7</string>
    <string name="four">7</string>
    <string name="selectWeek">Select week to start monitering Bunks!!</string>
    <string name="dateNotSet">Sorry!week cannot be selected since its earlier than default week!!</string>
    <string name="later">Cannot set this date!!you can mark attendence only till present week !!</string>
    <string name="reset">Reset</string>
    <string name="rateUs">Rate and Review Us</string>
    <string name="notification">Notifications</string>
    <string name="feedback">Feedback via E-mail</string>
    <string name="fb">Share about us</string>
    <string name="sure">Are you sure?</string>
    <string name="sureText">Reseting will delete all data of current sem!!</string>
    <string name="confirm">Confirm</string>
    <string name="setting">Settings</string>
    <string name="APP_ID">712621488772948</string>
    <string name="markAtt">Mark Bunk</string>
    <string name="predict">Predict Bunks</string>
    <string name="calBunk">Calculate Bunks</string>
    <string name="overall">Overall</string>
    <string name="pre">Pre:</string>
    <string name="total">Total</string>
    <string name="sorry">Sorry!!You cannot set week before default and after present weeks!! </string>
    <string name="spaceError">Sorry!!You cannot use spaces inbetween!!</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="predictEx">Predict weeks will calculate weeks based on the maximum number clicked through click right</string>
    <string name="never">Never</string>
    <string name="sample">How to use</string>
    <string name="greenBu">Attended lectures</string>
    <string name="redBu">Bunked lectures</string>
    <string name="precalEx">Click to know your predicted attendence(At top right corner in predict bunks)</string>
    <string name="defaultBu">Cancelled lectures</string>
    <string name="howtouse">Tips and Tricks:</string>
       <string name="blocktextsub">The no of clicks u give disables them for</string>   
    <string name="update_status">Share Attendance</string>
<string name="post_image">Update status</string>
<string name="changeE">Change status of entire day!!</string>
<string name="disads">Click on ads to disable them</string>
<string name="schedule">When do you want us to notify you?</string>
</resources>