<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tile4markbunk"
    android:orientation="vertical" 
    >
<RadioGroup 
    android:id="@+id/radBut"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="6dp"
    android:paddingTop="20dp">

    <TextView
        android:id="@+id/textView1"
        
        android:paddingBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule"
        android:textSize="20dp" />

    <RadioButton
        android:id="@+id/daily"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:paddingBottom="10dp"
         android:paddingTop="10dp"
        android:text="@string/daily" />

    <RadioButton
        android:id="@+id/weekly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
             android:paddingBottom="10dp"
             android:paddingTop="10dp"
        android:text="@string/weekly" />

    <RadioButton
        android:id="@+id/never"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
             android:paddingBottom="10dp"
        android:text="@string/never" />
</RadioGroup>

<Button
    android:id="@+id/checkRad"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/set" />

</LinearLayout>
